--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,18 +56,13 @@ website:
       - text: "---"
       - section: "Low Cost Boat"
         contents:
-          - uav/uav-index.qmd
-          - uav/listing1.qmd
-          - uav/products.qmd
-          # - href: https://gisma-courses.github.io/LV-uav-workflow/modules/module-introduction/
-          #   text: Basic Readings        
-          # - href: https://gisma-courses.github.io/LV-uav-workflow/modules/module-fieldwork/
-          #   text: uav/Flight Planning
+          - boat/page1.qmd
+          - boat/page2.qmd
       - text: "---"
       - section: "Concept & Background"
         contents:
-          - mclim/mc-index.qmd
-          - mclim/sensors.qmd
+          - c_b/pag1.qmd
+          -  c_b/pag2.qmd
       - text: "---"
       - section: "Software & Print sources"
         contents:
