--- a/_quarto.yml
+++ b/_quarto.yml
@@ -69,7 +69,7 @@ website:
            - href: https://github.com/MIND-Codes/stmBoatSoftware/tree/main/src
              text: Source Code   
            - href: https://github.com/MIND-Codes/stmBoatSoftware/tree/main/stl
-             text: 3D Print       
+             text: 3D-Print       
              
        
 
